# openhaystack-zephyr

./: .clang-format  LICENSE  README.rst  west.yml
.github/workflows/: build.yml
app/: CMakeLists.txt  prj.conf
app/boards/: holyiot_yj17095.conf
app/src/: main.c
modules/openhaystack/src/: openhaystack.c  openhaystack.h
scripts/: gen_settings_nvs.py  settings_nvs.md
